Removed padding to prevent side-scroll (on mobile). Reorganized CSS to make it more coherent. Modified css to remove unneeded styling.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,42 +24,8 @@ h4 {
   text-align: center;
 }
 
-#left-menu {
-  width: 20%;
-  height: 100vh;
-  position: fixed;
-  left: 0;
-  padding-top: 40px;
-  right: auto;
-  background-color: #19191A;
-}
-
-#right-menu {
-  position: absolute;
-  left: 20%;
-  width: 80%;
-  background-color: #19191A;
-}
-
-#top-menu {
-  background-color: #19191A !important;
-}
-
-#bottom-menu {
-  background-color: #19191A;
-}
-
 .primary-font {
   font-family: 'Arvo', serif;
-}
-
-.secondary-font {
-  font-family: 'Arvo', serif;
-}
-
-.section .title {
-  font-style: italic;
-  font-weight: 700;
 }
 
 .caption {
@@ -157,14 +123,6 @@ a.img__description:hover {
   text-decoration: none;
 }
 
-a.button__text {
-  text-decoration: none;
-}
-
-a.button__text:hover {
-  text-decoration: none;
-}
-
 .img__wrap:hover .img__description {
   visibility: visible;
   opacity: 1;
@@ -193,33 +151,7 @@ button {
   color: rgb(124, 143, 252);
 }
 
-.primary-color {
-  color: #FFFFFF;
-  background-color: #19191A;
-}
-
-.secondary-color {
-  color: #FFFFFF;
-  background-color: #303030;
-}
-
-.tertiary-color {
-  color: #FFFFFF;
-  background-color: #1e1e1e;
-}
-
-.background-accent {
-  color: #FFFFFF !important;
-  background-color: #FF8036 !important;
-
-  -webkit-transition: background-color 500ms linear !important;
-  -ms-transition: background-color 500ms linear !important;
-  transition: background-color 500ms linear !important;
-}
-
-.background-accent:hover {
-  background-color: #FF9C63 !important;
-}
+/* General Stylings */
 
 .full-height {
   min-height: 100vh;
@@ -241,6 +173,11 @@ button {
   border-radius: 10px;
 }
 
+.section .title {
+  font-style: italic;
+  font-weight: 700;
+}
+
 .title {
   font-size: 3vmin;
 }
@@ -258,6 +195,25 @@ button {
   font-size: 1rem;
 }
 
+/* Standard */
+
+#left-menu {
+  width: 20%;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  padding-top: 40px;
+  right: auto;
+  background-color: #19191A;
+}
+
+#right-menu {
+  position: absolute;
+  left: 20%;
+  width: 80%;
+  background-color: #19191A;
+}
+
 #right-menu .about-item.body{
   font-size: 2vmin;
   line-height: 3vmin;
@@ -265,12 +221,12 @@ button {
 
 /* Mobile */
 
-.white {
-  color: white;
+#top-menu {
+  background-color: #19191A !important;
 }
 
-.orange {
-  color: #FF8945;
+#bottom-menu {
+  background-color: #19191A;
 }
 
 #top-menu .title {
@@ -318,4 +274,28 @@ button {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
+}
+
+/* Colors */
+.white {
+  color: white;
+}
+
+.orange {
+  color: #FF8945;
+}
+
+.primary-color {
+  color: #FFFFFF;
+  background-color: #19191A;
+}
+
+.secondary-color {
+  color: #FFFFFF;
+  background-color: #303030;
+}
+
+.tertiary-color {
+  color: #FFFFFF;
+  background-color: #1e1e1e;
 }
